assets/sass/main.scss
// Here we import the old file, but any new styles can be added directly to
// this file below

@import 'helpers/choose_contrast_color';


// First import the custom colours
@import 'colors/theme';
// Set some Bootstrap variables
$brand-primary: $aplus-brand-primary;
$gray-base: $aplus-foreground;
$body-bg: $aplus-background;

// Next, import the functional colours
@import 'colors/functional';
$brand-success: $aplus-success;
$brand-info: $aplus-info;
$brand-warning: $aplus-warning;
$brand-danger: $aplus-danger;

//** Default progress bar color
$progress-bar-bg: $aplus-brand-primary;
//** Success progress bar color
$progress-bar-success-bg: $aplus-success-status-bg;
//** Warning progress bar color
$progress-bar-warning-bg: $aplus-warning-status-bg;
//** Danger progress bar color
$progress-bar-danger-bg: $aplus-danger-status-bg;
//** Info progress bar color
$progress-bar-info-bg: $aplus-info-status-bg;

// Import new font variables
@import 'variables/typography';
$font-family-sans-serif: $aplus-font-family-sans-serif;
$font-family-serif: $aplus-font-family-serif;
$font-family-monospace: $aplus-font-family-monospace;
$font-family-base: $aplus-font-family-base;
$font-size-base:  $aplus-font-size-base;

@import 'vendor/bootstrap3';

/*!
 * A+ Legacy Styles
 */

// Start wit the "old" styles, which are going to be progressively replaced.

@import 'legacy/main';

// Next start importing the new components

/*!
 * A+ Styles
 */
@import 'layout/header';
@import 'layout/footer';
@import 'components/badge';
@import 'components/breadcrumb';
@import 'components/button';
@import 'components/error_summary';
@import 'components/focus';
@import 'components/frontpage-cards';
@import 'components/menu-notification';
@import 'components/overlay';
@import 'pages/login';
@import 'pages/profile-page';

/*!
 * A+ Protocols
 */
@import 'protocols/quiz1';

